--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,32 @@
       <div class="container">
         <div class="columns">
           <div class="column is-offset-4 is-4">
+            <form method="POST">
+              <div class="field has-addons">
+                <div class="control is-expanded">
+                  <input
+                    class="input"
+                    name="city"
+                    type="text"
+                    placeholder="City Name"
+                  />
+                </div>
+                <div class="control">
+                  <button class="button is-info">
+                    Add City
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column is-offset-4 is-4">
+            {% for weather in weather_data %}
             <div class="box">
               <article class="media">
                 <div class="media-left">
@@ -47,6 +73,7 @@
                 </div>
               </article>
             </div>
+            {% endfor %}
           </div>
         </div>
       </div>
